# yolov8

yolov8/yolov8_cpp/binOLD/: vaip_config.json
yolov8/yolov8_cpp/implement/: .run_jpeg.bat.swp  CMakeLists.txt  build.bat  camera.bat  camera_mttest.bat  run_jpeg.bat
yolov8/yolov8_cpp/implement/yolov8/: demo_nx1x4.hpp  demo_yolov8_onnx_n.cpp
yolov8/yolov8_cpp/include/glog/: logging.h
yolov8/yolov8_cpp/lib/: gflags.lib  gflags_nothreads.lib  glog.lib
yolov8/yolov8_cpp2/: CMakeLists.txt  anchors.pt  strides.pt
yolov8/yolov8_cpp2/yolov8/: CMakeLists.txt  main.cpp  onnx_task.hpp  thread_safe_queue.h  yolov8_utils.cpp  yolov8_utils.h
yolov8/yolov8_python/: convert_assets.py  convert_assets_to_binary.py  dpu_timestamp_info.json  fused_viz.json  record_timer_ts.json  requirements.txt  summary.csv  webcam.py  xrt.run_summary  yolov8Webcam.py  yolov8WebcamRealtime.py  yolov8WebcamRealtime_extraoptimized.py  yolov8_utils.py  yolov8_webcam.ipynb
